# private-rag-test

./: README.md  main.py  pyproject.toml
boe_rag/: embedder.py  indexer.py  retriever.py  utils.py
data/: init_directories.sh  setup.sh  vector_db.duckdb
data/boe_mythology/: 001_サン・ジュカール.txt  002_サン・ジュカールの起源.txt  005_サン・ジスバ.txt  006_カロン・ジスバ.txt  009_テシム皇国の首都.txt  011_エガの術.txt  013_魔術工学.txt  016_帰還の儀式.txt  017_絹星草.txt  018_ジャヒルの仮面.txt  020_ミロド探査.txt
data/data/boe_mythology/: 003_テリペ王子.txt  004_エシム王国.txt  007_惑星ボーの月.txt  008_ミロド惑星.txt  010_ブルカニウム.txt  012_エシム王国の機械工学.txt  014_クレル月の遺跡.txt  015_ジュカール祭.txt  019_第一次統一戦争.txt  metadata.json
scripts/: generate_boe_mythology.py
