[project]
name = "boe-rag"
version = "0.1.0"
description = "惑星ボー神話のRAGシステム"
authors = [
    {name = "Koaquin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentencepiece (>=0.2.0,<0.3.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
